# Runner

./: Makefile
Game/: .gitignore  CMakeLists.txt  Makefile  Runner  run.bat
Game/includes/: AI.h  Button.h  Game.h  Gui.h  Map.h  Network.h  Racer.h  config.h  data.h
Game/src/: AI.cpp  Button.cpp  Car.cpp  CollisionManager.cpp  Game.cpp  Gui.cpp  Map.cpp  Network.cpp  Player.cpp  Racer.cpp  main.cpp
Network/: CMakeLists.txt  main.cpp
Network/include/: GamePacket.h  NetClient.h  NetSocket.h  NetTcpClient.h  NetTcpServer.h  NetUdpClient.h  NetUdpServer.h  packet.h  packetConfig.h
Network/src/: GamePacket.cpp  NetClient.cpp  NetSocket.cpp  NetTcpClient.cpp  NetTcpServer.cpp  NetUdpClient.cpp  NetUdpServer.cpp
Runner-Mini-Server/: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  miniserver  run.bat
Runner-Mini-Server/config/: config.json
Runner-Mini-Server/include/: RunnerServer.h
Runner-Mini-Server/src/: RunnerServer.cpp
Runner-Server/: CmakeLists.txt  main.cpp  run.bat
Runner-Server/config/: config.json
Runner-Server/include/: Server.h
Runner-Server/src/: Server.cpp
Signal/Signal/: Signal.h
resources/maps/: kin.map
src/: AI.cpp  Car.cpp  Car.h  CollisionManager.cpp  Game.cpp  Game.h  Map.cpp  Map.h  Player.cpp  Player.h  Racer.cpp  enums.h  main.cpp
src/includes/: Car.h  CollisionManager.h  Map.h  Player.h  Racer.h  enums.h  functions.h
